Added functionality to toggel between normal off and on

--- a/asg4.html
+++ b/asg4.html
@@ -70,6 +70,9 @@
     <script src="Vector.js"></script>
     <br><br>
     <p id="fps"> XXX </p>
+    <lable> Normal Vector On/Off</lable>
+    <input for="name" type="button" id="Normal_On" value="Normal On"></input>
+    <input for="name" type="button" id="Normal_Off" value="Normal Off"></input>
     <label>Add/Delete blocks:</label>
     <input for="name" type="button" id="Add_block" value="Add Block Textured"></input>
     <input for="name" type="button" id="Delete_block" value="Delete Block"></input>
