--- a/asg4.html
+++ b/asg4.html
@@ -68,6 +68,7 @@
     <script src="lib/cuon-matrix.js"></script>
     <script src="Camera.js"></script>
     <script src="Vector.js"></script>
+    <script src="Sphere.js"></script>
     <br><br>
     <p id="fps"> XXX </p>
     <lable> Normal Vector On/Off</lable>
