--- a/asg4.html
+++ b/asg4.html
@@ -74,6 +74,18 @@
     <lable> Normal Vector On/Off</lable>
     <input for="name" type="button" id="Normal_On" value="Normal On"></input>
     <input for="name" type="button" id="Normal_Off" value="Normal Off"></input>
+    <br><br>
+    <label>Light Movement</label>
+    <br>
+    <label> Light: X</label>
+    <input type="range" for="name" class="slider" id="light_x" min=-10 max=10 value=3></input>
+    <br>
+    <label>Light: Y</label>
+    <input type="range" for="name" class="slider" id="light_y" min=-2 max=10 value=6></input>
+    <br>
+    <label>Light: Z</label>
+    <input type="range" for="name" class="slider" id="light_z" min=-10 max=8 value=0></input>
+    <br><br>
     <label>Add/Delete blocks:</label>
     <input for="name" type="button" id="Add_block" value="Add Block Textured"></input>
     <input for="name" type="button" id="Delete_block" value="Delete Block"></input>
