Added light on and off functionality

--- a/asg4.html
+++ b/asg4.html
@@ -75,6 +75,10 @@
     <input for="name" type="button" id="Normal_On" value="Normal On"></input>
     <input for="name" type="button" id="Normal_Off" value="Normal Off"></input>
     <br><br>
+    <label>Light On/Off</label>
+    <input for="name" type="button" id="Light_On" value="Light On"></input>
+    <input for="name" type="button" id="Light_Off" value="Light Off"></input>
+    <br><br>
     <label>Light Movement</label>
     <br>
     <label> Light: X</label>
