Was able to add color to light

--- a/asg4.html
+++ b/asg4.html
@@ -79,6 +79,14 @@
     <input for="name" type="button" id="Light_On" value="Light On"></input>
     <input for="name" type="button" id="Light_Off" value="Light Off"></input>
     <br><br>
+    <label>Light Color</label>
+    <label>Red: </label>
+    <input for="name" type="range" class="slider" id="Light_color_r" min=0 max=255 value=255></input>
+    <label>Green: </label>
+    <input for="name" type="range" class="slider" id="Light_color_g" min=0 max=255 value=255></input>
+    <label>Blue: </label>
+    <input for="name" type="range" class="slider" id="Light_color_b" min=0 max=255 value=255></input>
+    <br><br>
     <label>Light Movement</label>
     <br>
     <label> Light: X</label>
