Added some animation in light

--- a/asg4.html
+++ b/asg4.html
@@ -79,6 +79,13 @@
     <input for="name" type="button" id="Light_On" value="Light On"></input>
     <input for="name" type="button" id="Light_Off" value="Light Off"></input>
     <br><br>
+    <label>Light Animation On/Off: Circular By Default</label>
+    <input for="name" type="button" id="Light_Animation_On" value="Light Animation On"></input>
+    <input for="name" type="button" id="Light_Animation_Off" value="Light Animation Off"></input>
+    <br>
+    <input for="name" type="button" id="Circular_Animation" value="Circular Animation"></input>
+    <input for="name" type="button" id="Horizontal_Animation" value="Horizontal Animation"></input>
+    <br><br>
     <label>Light Color</label>
     <label>Red: </label>
     <input for="name" type="range" class="slider" id="Light_color_r" min=0 max=255 value=255></input>
