Added controls to turn spotlight on and off

--- a/asg4.html
+++ b/asg4.html
@@ -86,6 +86,10 @@
     <input for="name" type="button" id="Circular_Animation" value="Circular Animation"></input>
     <input for="name" type="button" id="Horizontal_Animation" value="Horizontal Animation"></input>
     <br><br>
+    <label>Spotlight On/Off: </label>
+    <input for="name" type="button" id="spotlight_on" value="Spotlight On"></input>
+    <input for="name" type="button" id="spotlight_off" value="Spotlight Off"></input>
+    <br><br>
     <label>Light Color</label>
     <label>Red: </label>
     <input for="name" type="range" class="slider" id="Light_color_r" min=0 max=255 value=255></input>
