Now we are able to chnage the position of the spotlight

--- a/asg4.html
+++ b/asg4.html
@@ -86,11 +86,7 @@
     <input for="name" type="button" id="Circular_Animation" value="Circular Animation"></input>
     <input for="name" type="button" id="Horizontal_Animation" value="Horizontal Animation"></input>
     <br><br>
-    <label>Spotlight On/Off: </label>
-    <input for="name" type="button" id="spotlight_on" value="Spotlight On"></input>
-    <input for="name" type="button" id="spotlight_off" value="Spotlight Off"></input>
-    <br><br>
-    <label>Light Color</label>
+    <label>Light Color: </label>
     <label>Red: </label>
     <input for="name" type="range" class="slider" id="Light_color_r" min=0 max=255 value=255></input>
     <label>Green: </label>
@@ -99,15 +95,32 @@
     <input for="name" type="range" class="slider" id="Light_color_b" min=0 max=255 value=255></input>
     <br><br>
     <label>Light Movement</label>
-    <br>
     <label> Light: X</label>
     <input type="range" for="name" class="slider" id="light_x" min=-10 max=10 value=3></input>
-    <br>
     <label>Light: Y</label>
     <input type="range" for="name" class="slider" id="light_y" min=-2 max=10 value=6></input>
-    <br>
     <label>Light: Z</label>
     <input type="range" for="name" class="slider" id="light_z" min=-10 max=8 value=0></input>
+    <br><br>
+    <label>Spotlight On/Off: </label>
+    <input for="name" type="button" id="spotlight_on" value="Spotlight On"></input>
+    <input for="name" type="button" id="spotlight_off" value="Spotlight Off"></input>
+    <br><br>
+    <label>Spotlight Color: </label>
+    <label>Red: </label>
+    <input for="name" type="range" class="slider" id="spotlight_color_r" min=0 max=255 value=255></input>
+    <label>Green: </label>
+    <input for="name" type="range" class="slider" id="spotlight_color_g" min=0 max=255 value=255></input>
+    <label>Blue: </label>
+    <input for="name" type="range" class="slider" id="spotlight_color_b" min=0 max=255 value=255></input>
+    <br><br>
+    <label>Spotlight Position: </label>
+    <label>X: </label>
+    <input type="range" for="name" class="slider" id="spotlight_x" min=-10 max=10 value=-2.5></input>
+    <label>Y: </label>
+    <input type="range" for="name" class="slider" id="spotlight_y" min=-2 max=10 value=2.5></input>
+    <label>Z: </label>
+    <input type="range" for="name" class="slider" id="spotlight_z" min=-10 max=8 value=3></input>
     <br><br>
     <label>Add/Delete blocks:</label>
     <input for="name" type="button" id="Add_block" value="Add Block Textured"></input>
