Adding a normal matrix

--- a/asg4.html
+++ b/asg4.html
@@ -13,8 +13,9 @@
     Please use a browser that supports "canvas"
     </canvas>
     <p style="float:right;clear:right;display:block;padding-right: 55px; padding-top: 5px; text-align: left;">
-    <strong> Virtual World: Black Hole Space Station </strong>
-    <br>
+    <strong> Lighting: Black Hole Space Station with Lighting</strong>
+    <br> 
+    <br> <strong>World from the previous assignment is used. </strong>
     <br> Blocky Animal Added: Wall - E from assignment 2
     <br>
     <br> Hello traveller! This world is a space station surrounded by
