--- a/asg4.html
+++ b/asg4.html
@@ -141,7 +141,7 @@
     <label for="name">Camera Angle: Vertical</label>
     <input type="range" id="camera_angle2" min=0 max=90 value=0 class="slider"></input>
     <br>
-    <label for="name">Global scaling</label>
+    <!-- <label for="name">Global scaling</label>
     <input type="range" id="global_scale" min=100 max=200 value=100 class="slider"></input>
     <br>
     <label for="name">Legs: Vertical</label>
@@ -166,6 +166,7 @@
     <input type="range" id="neck_upper_rotate" min=-25 max=25 value=0 class="slider"></input>
     <br>
     <label for="name">Lower Neck Rotate: front-back</label>
-    <input type="range" id="neck_front_back" min=-20 max=40 value=0 class="slider"></input>
+    <input type="range" id="neck_front_back" min=-20 max=40 value=0 class="slider"></input> -->
+    <br><br><br>
   </body>
 </html>
