Resetting the light position

--- a/asg4.html
+++ b/asg4.html
@@ -92,6 +92,9 @@
     <input for="name" type="button" id="Circular_Animation" value="Circular Animation"></input>
     <input for="name" type="button" id="Horizontal_Animation" value="Horizontal Animation"></input>
     <br><br>
+    <label>Reset Light Button</label>
+    <input for="name" type="button" id="Light_Reset" value="Light Reset Position"></input>
+    <br><br>
     <label>Light Color: </label>
     <label>Red: </label>
     <input for="name" type="range" class="slider" id="Light_color_r" min=0 max=255 value=255></input>
