Added some HTML text changes

--- a/asg4.html
+++ b/asg4.html
@@ -18,37 +18,37 @@
     <br> <strong>World from the previous assignment is used. </strong>
     <br>
     <br> Hello traveller! This world is the same space station surrounded by
-    <br> black holes on all sides as you experienced in the previous assignment.
+    <br> black holes on all sides that you travelled to in the previous assignment.
     <br> The rules of this world are exactly the same as last time:
-    <br> About this world (or Game):
-    <br> <strong> To escape the black hole, you will have to find a few things/materials. </strong>
+    <br> <strong> - To escape the black hole, you will have to find a few things/materials. </strong>
     <br> - Use the keys A, S, D, Q, W, E to move in the space station.
     <br> - Every pyramid has some material (gold, silver, or energy: represented by a neon cube) hidden inside it.
-    <br> - You can add and delete block
-    <br> - <strong> Press shift to get a view of the whole world. </strong>
+    <br> - You can add and delete blocks
+    <br> - <strong> Click and press shift to get a view of the whole world. </strong>
     <br> - You can also use your mouse to turn left and right.
     <br> - Another feature of this futuristic world: There are no collisions. If you
     <br> keep walking, you might as well go inside a block. The general laws of
     <br> physics seem to be broken here.
     <br> <br>
-    <br> <strong>Things that are unique in this world now as compared to the last assignment: </strong>
+    <br> <strong>Things that are unique in this world as compared to the last assignment (Lighting): </strong>
     <br>
     <br> - There is a massive green sphere in the middle!
-    <br> <strong>There are 2 yellow boxes: The smaller in the back represents the light.
-      <br> The bigger in the front represents the spotlight.
+    <br> <strong>There are 2 yellow boxes: The smaller box in the back represents the main light.
+      <br> The bigger box in the front represents the spotlight.
     </strong>
-    <br> - To turn on/off the normal view, use the buttons "Normal On" and "Normal Off".
-    <br> - There is Phong lighting (diffuse + ambient + specular). The small yellow box in the back
-    <br> represents the light.
-    <br> - There are 2 kinds of annimations in the main light: 
-    <br> - To turn on the light animation, click on the "Light Animation On" button.
-    <br> To turn off the animation, click on the "Light Animation Off" button. By default, the type
-    <br> of animation is set to Circular, which means the light will go in a circular motion around the world.
-    <br> If you want to chnage the animation to horizontal (in which just the x component will change and the
+    <br> - To turn the normal view on/off, use the buttons "Normal On" and "Normal Off".
+    <br> - There is Phong lighting (diffuse + ambient + specular) implemented. The small yellow box 
+    <br> in the back represents the light.
+    <br> - There are 2 kinds of animations for the main light: 
+    <br> - <strong> To turn on the light animation, click on the "Light Animation On" button. </strong>
+    <br> To turn off the animation, click on the "Light Animation Off" button. <strong> By default, the type
+    <br> of animation is set to Circular </strong>, which means the light will go in a circular motion around the world.
+    <br> If you want to change the animation to horizontal (in which just the x component will change and the
     <br> light will move left to right on the screen), click on the "Horizontal Animation" button. If you
     <br> want to revert the animation to circular, click on the "Circular Animation" button.
     <br> - To manually change the position of the main light, use the sliders: "Light: X", "Light: Y", and
     <br> "Light: Z" next to the "Light Movement" label.
+    <br> - To reset the position of the light, click on the "Light Reset Position" button.
     <br> - To change the color of the light, use the sliders "Red", "Green", and "Blue" next to the "Light Color" label.
     <br> - To turn the light on and off, use the buttons "Light On" and "Light Off". Note: this will not
     <br> turn off the spotlight. There are different controls for turning the spotlight on/off.
